force-app/main/default/objects/AdOrderItem/fields/GAM_Delivered_Clicks__c.field-meta.xml
<CustomField>
    <fullName>GAM_Delivered_Clicks__c</fullName>
    <label>GAM Delivered Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Real clicks delivered so far, pulled directly from Google Ad Manager's LineItem stats.</description>
</CustomField>