force-app/main/default/objects/AdOrderItem/fields/GAM_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>GAM_Delivery_Status__c</fullName>
    <label>GAM Delivery Status</label>
    <length>60</length>
    <type>Text</type>
    <description>Real Line Item status (e.g. DELIVERING, COMPLETED, PAUSED) as of the last sync from Google Ad Manager.</description>
</CustomField>