force-app/main/default/objects/AdOrderItem/fields/GAM_Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>GAM_Last_Synced__c</fullName>
    <label>GAM Last Synced</label>
    <type>DateTime</type>
    <description>Timestamp of the last successful delivery-data sync from Google Ad Manager for this Line Item.</description>
</CustomField>